build-files/pling/3.0.3/README.md
# Pling container

Main tool: [pling](https://pling.readthedocs.io/latest/)
  
Code repository: https://github.com/iqbal-lab-org/pling

<details>
<summary>Additional tools installed via micromamba:</summary>

```
List of packages in environment: "/opt/conda"

  Name                       Version      Build                 Channel    
─────────────────────────────────────────────────────────────────────────────
  _openmp_mutex              4.5          20_gnu                conda-forge
  aioeasywebdav              2.4.0        pyha770c72_0          conda-forge
  aiohappyeyeballs           2.7.1        pyhd8ed1ab_0          conda-forge
  aiohttp                    3.14.2       py311h55b9665_0       conda-forge
  aiosignal                  1.4.0        pyhd8ed1ab_0          conda-forge
  amply                      0.1.7        pyhd8ed1ab_0          conda-forge
  annotated-doc              0.0.4        pyhcf101f3_0          conda-forge
  annotated-types            0.7.0        pyhd8ed1ab_1          conda-forge
  appdirs                    1.4.4        pyhd8ed1ab_1          conda-forge
  argparse-dataclass         2.0.0        pyhd8ed1ab_1          conda-forge
  attrs                      26.1.0       pyhcf101f3_0          conda-forge
  backports.zstd             1.6.0        py311h6b1f9c4_0       conda-forge
  bcrypt                     5.0.0        py311h902ca64_1       conda-forge
  bitarray                   3.8.0        py311h49ec1c0_1       conda-forge
  bitstring                  4.4.0        pyhd8ed1ab_0          conda-forge
  boto3                      1.43.53      pyhd8ed1ab_0          conda-forge
  botocore                   1.43.53      pyhd8ed1ab_0          conda-forge
  brotli                     1.2.0        hed03a55_1            conda-forge
  brotli-bin                 1.2.0        hb03c661_1            conda-forge
  brotli-python              1.2.0        py311h66f275b_1       conda-forge
  bzip2                      1.0.8        hda65f42_9            conda-forge
  c-ares                     1.34.8       hb03c661_0            conda-forge
  ca-certificates            2026.7.22    hbd8a1cb_0            conda-forge
  cachetools                 5.5.2        pyhd8ed1ab_0          conda-forge
  cairo                      1.18.4       he90730b_1            conda-forge
  certifi                    2026.7.22    pyhd8ed1ab_0          conda-forge
  cffi                       2.1.0        py311h03d9500_0       conda-forge
  charset-normalizer         3.4.9        pyhd8ed1ab_0          conda-forge
  click                      8.4.2        pyhc90fa1f_0          conda-forge
  coin-or-cbc                2.10.13      h4d16d09_1            conda-forge
  coin-or-cgl                0.60.10      hc46dffc_1            conda-forge
  coin-or-clp                1.17.11      hc03379b_1            conda-forge
  coin-or-osi                0.108.12     hf4fecb4_1            conda-forge
  coin-or-utils              2.11.13      hc93afbd_1            conda-forge
  coincbc                    2.10.13      1_metapackage         conda-forge
  colorama                   0.4.6        pyhd8ed1ab_1          conda-forge
  coloredlogs                15.0.1       pyhd8ed1ab_4          conda-forge
  configargparse             1.7.5        pyhcf101f3_0          conda-forge
  connection_pool            0.0.3        pyhd3deb0d_0          conda-forge
  contourpy                  1.3.3        py311h724c32c_4       conda-forge
  cryptography               49.0.0       py311h2005dd1_0       conda-forge
  cycler                     0.12.1       pyhcf101f3_2          conda-forge
  datrie                     0.8.3        py311h49ec1c0_0       conda-forge
  defusedxml                 0.7.1        pyhd8ed1ab_0          conda-forge
  deprecation                2.1.0        pyh9f0ad1d_0          conda-forge
  dingii                     0.0.1        pyhdfd78af_0          bioconda   
  docutils                   0.23         pyhcf101f3_0          conda-forge
  dpath                      2.2.0        pyha770c72_1          conda-forge
  dropbox                    12.0.2       pyhd8ed1ab_1          conda-forge
  eido                       0.2.5        pyhd8ed1ab_0          conda-forge
  filechunkio                1.8          py_2                  conda-forge
  font-ttf-dejavu-sans-mono  2.37         hab24e00_0            conda-forge
  font-ttf-inconsolata       3.000        h77eed37_0            conda-forge
  font-ttf-source-code-pro   2.038        h77eed37_0            conda-forge
  font-ttf-ubuntu            0.83         h77eed37_3            conda-forge
  fontconfig                 2.18.2       h27c8c51_0            conda-forge
  fonts-conda-ecosystem      1            0                     conda-forge
  fonts-conda-forge          1            hc364b38_1            conda-forge
  fonttools                  4.63.0       py311h3778330_0       conda-forge
  freetype                   2.14.3       ha770c72_0            conda-forge
  fribidi                    1.0.16       hb03c661_0            conda-forge
  frozenlist                 1.8.0        py311h52bc045_0       conda-forge
  ftputil                    5.1.0        pyhd8ed1ab_0          conda-forge
  gitdb                      4.0.12       pyhd8ed1ab_0          conda-forge
  gitpython                  3.1.54       pyhd8ed1ab_0          conda-forge
  glpk                       5.0          h445213a_0            conda-forge
  gmp                        6.3.0        hac33072_2            conda-forge
  google-api-core            2.32.0       pyhcf101f3_0          conda-forge
  google-api-python-client   2.198.0      pyh332efcf_0          conda-forge
  google-auth                2.56.2       pyhcf101f3_0          conda-forge
  google-auth-httplib2       0.4.0        pyhcf101f3_0          conda-forge
  google-cloud-core          2.6.0        pyhcf101f3_1          conda-forge
  google-cloud-storage       3.13.0       pyhcf101f3_0          conda-forge
  google-crc32c              1.8.0        py311h2702b87_1       conda-forge
  google-resumable-media     2.8.0        pyhd8ed1ab_0          conda-forge
  googleapis-common-protos   1.75.0       pyhcf101f3_0          conda-forge
  graphite2                  1.3.15       hecca717_0            conda-forge
  grpcio                     1.81.1       py311h3aa0767_0       conda-forge
  grpcio-status              1.81.1       pyhcf101f3_0          conda-forge
  h2                         4.3.0        pyhcf101f3_0          conda-forge
  hpack                      4.2.0        pyhd8ed1ab_0          conda-forge
  httplib2                   0.32.0       pyhcf101f3_0          conda-forge
  humanfriendly              10.0         pyh707e725_8          conda-forge
  hyperframe                 6.1.0        pyhd8ed1ab_0          conda-forge
  icu                        78.3         h33c6efd_1            conda-forge
  idna                       3.18         pyhcf101f3_0          conda-forge
  intervaltree               3.1.0        pyhd8ed1ab_1          conda-forge
  invoke                     3.0.3        pyhd8ed1ab_0          conda-forge
  jinja2                     3.1.6        pyhcf101f3_1          conda-forge
  jmespath                   1.1.0        pyhcf101f3_1          conda-forge
  jsonschema                 4.26.0       pyhcf101f3_0          conda-forge
  jsonschema-specifications  2025.9.1     pyhcf101f3_0          conda-forge
  jupyter_core               5.9.1        pyhc90fa1f_0          conda-forge
  kiwisolver                 1.5.0        py311h724c32c_0       conda-forge
  lcms2                      2.19.1       h0c24ade_1            conda-forge
  ld_impl_linux-64           2.46.1       default_hbd61a6d_102  conda-forge
  lerc                       4.1.0        hdb68285_0            conda-forge
  libabseil                  20260107.1   cxx17_h7b12aa8_0      conda-forge
  libblas                    3.11.0       8_h4a7cf45_openblas   conda-forge
  libbrotlicommon            1.2.0        hb03c661_1            conda-forge
  libbrotlidec               1.2.0        hb03c661_1            conda-forge
  libbrotlienc               1.2.0        hb03c661_1            conda-forge
  libcblas                   3.11.0       8_h0358290_openblas   conda-forge
  libcrc32c                  1.1.2        h9c3ff4c_0            conda-forge
  libdeflate                 1.25         h17f619e_0            conda-forge
  libexpat                   2.8.1        hecca717_1            conda-forge
  libffi                     3.5.2        h3435931_0            conda-forge
  libfreetype                2.14.3       ha770c72_0            conda-forge
  libfreetype6               2.14.3       h73754d4_0            conda-forge
  libgcc                     15.2.0       he0feb66_19           conda-forge
  libgcc-ng                  15.2.0       h69a702a_19           conda-forge
  libgfortran                15.2.0       h69a702a_19           conda-forge
  libgfortran5               15.2.0       h68bc16d_19           conda-forge
  libglib                    2.88.2       h0d30a3d_0            conda-forge
  libgomp                    15.2.0       he0feb66_19           conda-forge
  libgrpc                    1.81.1       h1d1128b_0            conda-forge
  libharfbuzz                14.2.1       h17a8019_1            conda-forge
  libiconv                   1.18         h3b78370_2            conda-forge
  libjpeg-turbo              3.2.0        hb03c661_0            conda-forge
  liblapack                  3.11.0       8_h47877c9_openblas   conda-forge
  liblapacke                 3.11.0       8_h6ae95b6_openblas   conda-forge
  liblzma                    5.8.3        hb03c661_0            conda-forge
  libnsl                     2.0.1        hb9d3cd8_1            conda-forge
  libopenblas                0.3.33       pthreads_h94d23a6_0   conda-forge
  libpng                     1.6.58       h421ea60_0            conda-forge
  libprotobuf                6.33.5       h538a264_2            conda-forge
  libraqm                    0.10.5       h6406941_1            conda-forge
  libre2-11                  2025.11.05   h0dc7533_1            conda-forge
  libsodium                  1.0.22       h280c20c_1            conda-forge
  libsqlite                  3.53.3       h0c1763c_0            conda-forge
  libstdcxx                  15.2.0       h934c35e_19           conda-forge
  libstdcxx-ng               15.2.0       hdf11a46_19           conda-forge
  libtiff                    4.7.2        h9d88235_0            conda-forge
  libuuid                    2.42.2       h5347b49_0            conda-forge
  libwebp-base               1.6.0        hd42ef1d_0            conda-forge
  libxcb                     1.17.0       h8a09558_0            conda-forge
  libxcrypt                  4.4.36       hd590300_1            conda-forge
  libzlib                    1.3.2        h25fd6f3_2            conda-forge
  logmuse                    0.3.0        pyhcf101f3_0          conda-forge
  markdown-it-py             4.2.0        pyhd8ed1ab_0          conda-forge
  markupsafe                 3.0.3        py311h3778330_1       conda-forge
  matplotlib-base            3.11.1       py311h0a88c4d_0       conda-forge
  mdurl                      0.1.2        pyhd8ed1ab_1          conda-forge
  multidict                  6.7.1        py311h3778330_0       conda-forge
  mummer4                    4.0.1        pl5321h9948957_0      bioconda   
  munkres                    1.1.4        pyhd8ed1ab_1          conda-forge
  nbformat                   5.10.4       pyhd8ed1ab_1          conda-forge
  ncurses                    6.6          hdb14827_0            conda-forge
  networkx                   3.6.1        pyhcf101f3_0          conda-forge
  numpy                      2.4.6        py311h2e04523_0       conda-forge
  oauth2client               4.1.3        pyhd8ed1ab_1          conda-forge
  openjpeg                   2.5.4        h55fea9a_0            conda-forge
  openssl                    3.6.3        h35e630c_0            conda-forge
  packaging                  26.2         pyhc364b38_0          conda-forge
  pandas                     2.3.3        py311hed34c8f_2       conda-forge
  paramiko                   5.0.0        pyhd8ed1ab_0          conda-forge
  pcre2                      10.47        haa7fec5_0            conda-forge
  pephubclient               0.4.4        pyhd8ed1ab_1          conda-forge
  peppy                      0.40.8       pyhd8ed1ab_0          conda-forge
  perl                       5.32.1       7_hd590300_perl5      conda-forge
  pillow                     12.3.0       py311hf88fc01_0       conda-forge
  pip                        26.1.2       pyh8b19718_0          conda-forge
  pixman                     0.46.4       h54a6638_2            conda-forge
  plasnet                    0.7.0        pyhdfd78af_0          bioconda   
  platformdirs               4.11.0       pyhcf101f3_0          conda-forge
  pling                      3.0.3        pyhdfd78af_0          bioconda   
  ply                        3.11         pyhd8ed1ab_3          conda-forge
  prettytable                3.18.0       pyhd8ed1ab_0          conda-forge
  propcache                  0.5.2        py311h3778330_0       conda-forge
  proto-plus                 1.28.1       pyhcf101f3_0          conda-forge
  protobuf                   6.33.5       py311h3f0a9aa_2       conda-forge
  psutil                     7.2.2        py311haee01d2_0       conda-forge
  pthread-stubs              0.4          hb9d3cd8_1002         conda-forge
  pulp                       2.7.0        py311h38be061_1       conda-forge
  pyasn1                     0.6.4        pyhcf101f3_0          conda-forge
  pyasn1-modules             0.4.2        pyhd8ed1ab_0          conda-forge
  pycparser                  3.0          pyhcf101f3_0          conda-forge
  pydantic                   2.13.4       pyhcf101f3_0          conda-forge
  pydantic-core              2.46.4       py311h902ca64_0       conda-forge
  pygments                   2.20.0       pyhd8ed1ab_0          conda-forge
  pynacl                     1.6.2        py311h42303ae_3       conda-forge
  pyparsing                  3.3.2        pyhcf101f3_0          conda-forge
  pysftp                     0.2.9        py_1                  conda-forge
  pysocks                    1.7.1        pyha55dd90_7          conda-forge
  python                     3.11.15      h7508c33_1_cpython    conda-forge
  python-dateutil            2.9.0.post0  pyhe01879c_2          conda-forge
  python-fastjsonschema      2.21.2       pyhe01879c_0          conda-forge
  python-irodsclient         3.1.1        pyhff2d567_1          conda-forge
  python-tzdata              2026.3       pyhd8ed1ab_0          conda-forge
  python_abi                 3.11         8_cp311               conda-forge
  pytz                       2026.2       pyhcf101f3_0          conda-forge
  pyu2f                      0.1.5        pyhd8ed1ab_1          conda-forge
  pyyaml                     6.0.3        py311h3778330_1       conda-forge
  qhull                      2020.2       h434a139_5            conda-forge
  re2                        2025.11.05   h5301d42_1            conda-forge
  readline                   8.3          h853b02a_0            conda-forge
  referencing                0.37.0       pyhcf101f3_0          conda-forge
  requests                   2.34.2       pyhcf101f3_0          conda-forge
  reretry                    0.11.8       pyhd8ed1ab_1          conda-forge
  rich                       15.0.0       pyhcf101f3_0          conda-forge
  rpds-py                    2026.6.3     py311h1baac5b_0       conda-forge
  rsa                        4.9.1        pyhd8ed1ab_0          conda-forge
  ruby                       4.0.6        h95e6935_0            conda-forge
  s3transfer                 0.19.1       pyhd8ed1ab_0          conda-forge
  scipy                      1.17.1       py311hbe70eeb_1       conda-forge
  screed                     1.2.0        pyhd8ed1ab_0          conda-forge
  setuptools                 81.0.0       pyh332efcf_0          conda-forge
  setuptools-scm             10.2.1       pyhcf101f3_0          conda-forge
  shellingham                1.5.4        pyhd8ed1ab_2          conda-forge
  six                        1.17.0       pyhe01879c_1          conda-forge
  slacker                    0.14.0       pyhd8ed1ab_1          conda-forge
  smart_open                 8.0.1        pyhcf101f3_0          conda-forge
  smmap                      5.0.3        pyhcf101f3_1          conda-forge
  snakemake                  7.32.4       hdfd78af_1            bioconda   
  snakemake-minimal          7.32.4       pyhdfd78af_1          bioconda   
  sortedcontainers           2.4.0        pyhd8ed1ab_1          conda-forge
  sourmash                   4.9.4        hdfd78af_0            bioconda   
  sourmash-minimal           4.9.4        h0b5653c_2            conda-forge
  stone                      3.3.2        pyhd8ed1ab_0          conda-forge
  stopit                     1.1.2        pyhcf101f3_2          conda-forge
  tabulate                   0.10.0       pyhcf101f3_0          conda-forge
  throttler                  1.2.2        pyhd8ed1ab_0          conda-forge
  tibs                       0.5.7        py311hf6208d2_1       conda-forge
  tk                         8.6.13       noxft_hd70dff1_3      conda-forge
  toml                       0.10.2       pyhcf101f3_3          conda-forge
  tomli                      2.4.1        pyhcf101f3_0          conda-forge
  toposort                   1.10         pyhd8ed1ab_1          conda-forge
  traitlets                  5.15.1       pyhcf101f3_0          conda-forge
  typer                      0.27.0       pyhcf101f3_0          conda-forge
  typing-extensions          4.16.0       h69aa097_0            conda-forge
  typing-inspection          0.4.2        pyhcf101f3_2          conda-forge
  typing_extensions          4.16.0       pyhcf101f3_0          conda-forge
  tzdata                     2026c        h151e31d_0            conda-forge
  ubiquerg                   0.9.3        pyhd8ed1ab_0          conda-forge
  unicodedata2               17.0.1       py311h49ec1c0_0       conda-forge
  uritemplate                4.2.0        pyhd8ed1ab_0          conda-forge
  urllib3                    2.7.0        pyhd8ed1ab_0          conda-forge
  vcs_versioning             2.2.2        pyhcf101f3_0          conda-forge
  wcwidth                    0.8.2        pyhd8ed1ab_0          conda-forge
  wheel                      0.47.0       pyhd8ed1ab_0          conda-forge
  wrapt                      2.2.2        py311h49ec1c0_0       conda-forge
  xorg-libice                1.1.2        hb9d3cd8_0            conda-forge
  xorg-libsm                 1.2.6        he73a12e_0            conda-forge
  xorg-libx11                1.8.13       he1eb515_0            conda-forge
  xorg-libxau                1.0.12       hb03c661_1            conda-forge
  xorg-libxdmcp              1.1.5        hb03c661_1            conda-forge
  xorg-libxext               1.3.7        hb03c661_0            conda-forge
  xorg-libxrender            0.9.12       hb9d3cd8_0            conda-forge
  yaggo                      1.5.10       hdfd78af_1            bioconda   
  yaml                       0.2.5        h280c20c_3            conda-forge
  yarl                       1.24.5       py311h3778330_0       conda-forge
  yte                        1.9.4        pyhd8ed1ab_0          conda-forge
  zlib-ng                    2.3.3        hceb46e0_1            conda-forge
  zstd                       1.5.7        hb78ec9c_6            conda-forge
```
</details>


Basic information on how to use this tool:
- executable: `pling`
- help: `-h`, `--help`
- version: `--version`
- description: 
>Pling is a software workflow for plasmid analysis using rearrangement distances, specifically the Double Cut and Join Indel (DCJ-Indel) distance. By intelligently combining containment distance (shared content as fraction of the smaller) and DCJ-indel distance (“how far apart evolutionarily” in a structural sense), and by preventing shared mobile elements from clouding the issue, it infers clusters of related plasmids.

Additional information:

Please note that on top of `pling cluster`, there are two additional main subcommands for pling. Namely, `pling submatrix` and `pling add`. Unfortunately, although the documentation mentions them under advanced usage, there is little to no documentation about them presently available. We strongly suggest that the user run the following commands to learn about their respective use cases based on their needs:

- `pling add --help`: "This command is for adding novel plasmids to an existing pling clustering, or merging multiple prior clustering together."
    - `pling add [OPTIONS] GENOMES_LIST OUTPUT_DIR PREVIOUS_PLING...`
    - Add new genomes to an existing pling clustering, and/or merge multiple previous clusterings into a single clustering.
    - First input is a path to list of fasta file paths. This list must contain ALL genomes to be clustered, i.e. both genomes to add to previous clustering and genomes from previous clustering.
    - Second input is a path to an output directory.
    - Third input is a path to previous pling output directory (multiple are permitted).
- `pling submatrix --help`: "Provides some potentially useful outputs for downstream analysis, based on pling clustering results and DCJ-Indel distances."
    - `pling submatrix [OPTIONS] OUTPUT_DIR`
    - Output DCJ-Indel distances as matrices for each subcommunity, and calculate neighbour-joining trees.

Frolova, D., Lima, L., Roberts, L. W., Bohnenkämper, L., Wittler, R., Stoye, J., & Iqbal, Z. (2024). Applying rearrangement distances to enable plasmid epidemiology with pling. Microbial Genomics, 10(10). https://doi.org/10.1099/mgen.0.001300

Full documentation: https://pling.readthedocs.io/latest/

## Example Usage

```bash
# input is a text file of a list of paths to fasta files
pling cluster align input.txt output_dir
```
